[package]
name = "rocket_mvc"
version = "0.1.0"
authors = ["Caleb Webber <caleb@codingthemsoftly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "0.4.6"
proc-macro2 = "1.0.24"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates", "serve"]
